Avancement de la coche verte

--- a/menu1/menu1.html
+++ b/menu1/menu1.html
@@ -40,40 +40,43 @@
                 </div>
 
                 <div class="starter">
-                    <p class="starter-title"><span class="span1">ENTR</span>ÉES</p>
-
-                    <a class="starter1" href="">
-                        <div class="start1">
-                            <p class="start1-title">Fricassée d'escargot</p>
-                            <div class="start1-flex">
-                                <p class="start1-detail">Au piment d'Espelette </p>
-                                <p class="start1-price">25€</p>
-                            </div>
-                            <div class="check">
-                                <img class ="check-circle" src="../images/font/check.svg" alt="check">
-                            </div>
+                    <p class="starter-title"><span class="span2">ENTR</span>ÉES</p>
+                    <div class="starter-card1">
+                        <div class="start-choice1">
+                            <p>Fricassée d'escargot</p>
+                            <p>Au piment d'espelette</p>
+                            <p>25€</p>
                         </div>
-                    </a>
-
-                    <a class="starter2" href="">
-                        <div class="start2">
-                            <p class="start2-title">Foie gras de canard mi-cuit</p>
-                            <div class="start2-flex">   
-                                <p class="start2-detail">Et ses copeaux de truffe noire </p>
-                                <p class="start2-price">35€</p>
-                            </div> 
+                        <div class="check1">
+                            <img class="check-circle1" src="../images/font/check.svg" alt="check">
                         </div>
-                    </a>
-
-                    <a class="starter3" href="">
-                        <div class="start3">
-                            <p class="start3-title">Oeuf au plat</p>
-                            <div class="start3-flex">
-                                <p class="start3-detail">Assaisonné à la truffe sur lit de caviar </p>
-                                <p class="start3-price">20€</p>
-                            </div>
+                    </div>
+                </div>
+                
+                <div class="starter">
+                    <div class="starter-card2">
+                        <div class="start-choice2">
+                            <p>Foie gras de canard mi-cuit</p>
+                            <p>Et ses copeaux de truffe noire</p>
+                            <p>35€</p>
                         </div>
-                    </a>
+                        <div class="check2">
+                            <img class="check-circle2" src="../images/font/check.svg" alt="check">
+                        </div>
+                    </div>
+                </div>
+                               
+                <div class="starter">
+                    <div class="starter-card3">
+                        <div class="start-choice3">
+                            <p>Oeuf au plat</p>
+                            <p>Assaisonné à la truffe sur lit de caviar</p>
+                            <p>20€</p>
+                        </div>
+                        <div class="check3">
+                            <img class="check-circle3" src="../images/font/check.svg" alt="check">
+                        </div>
+                    </div>
                 </div>
 
                 <div class="dishes">
