--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <!-- Restaurant selection -->
                 <h2>Restaurants</h2>
 
-                <a class="restaurant1-link" href="/menu1/menu1.html">
+                <a class="restaurant1-link" href="menu1/menu1.html">
                     <div class="menilmontant">
                         <img class="menilmontant-img" src="images/restaurants/menilmontant.jpg" alt="menilmontant">
                         <img class="menilmontant-new" src="images/font/nouveau.svg" alt="new">
