modification of the loader

--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
 
     <body>
          <!--Loader-->
-         <div class="overlay">
-            <div class="spinner"></div>
-        </div>
+        <section class="body">
+            <div class="section">
+                <span class="loader loader-quart"></span>
+                Chargement...
+            </div>
+        </section>
 
         <div class="bloc-page">
 
