--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!-- Ohmyfood -->
+        <link rel="icon" type="image/png" href="images/logo/ohmyfood@2x.svg" />
         <meta name="description" content="Discover the best restaurants around you in one click. Fast and easy!"> 
         <title>Ohmyfood</title>
 
@@ -22,7 +23,7 @@
         <section class="body">
             <div class="section">
                 <span class="loader loader-quart"></span>
-                Chargement...
+                Vos restaurants préférés arrivent tout de suite ...
             </div>
         </section>
 
