--- a/menu4/menu4.html
+++ b/menu4/menu4.html
@@ -12,6 +12,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!-- Ohmyfood -->
+        <link rel="icon" type="image/png" href="../images/logo/ohmyfood@2x.svg" />
         <meta name="description" content="Discover the best restaurants around you in one click. Fast and easy!"> 
         <title>Le délice des sens</title>
     </head>
@@ -35,7 +36,7 @@
 
             <section>
                 <div class="main-title">
-                    <p class="title">À la française</p>
+                    <p class="title">Le délice des sens</p>
                     <img class ="heart" src="../images/font/heart.svg" alt="heart">
                 </div>
 
