--- a/menu2/menu2.html
+++ b/menu2/menu2.html
@@ -12,8 +12,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!-- Ohmyfood -->
+        <link rel="icon" type="image/png" href="../images/logo/ohmyfood@2x.svg" />
         <meta name="description" content="Discover the best restaurants around you in one click. Fast and easy!"> 
-        <title>Menu - La palette du goût</title>
+        <title>La note enchantée</title>
     </head>
 
     <body>
