MAJ après mentorat sur accueil

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
          <!--Loader-->
         <section class="body">
             <div class="section">
-                <span class="loader loader-quart"></span>
-                Vos restaurants préférés arrivent tout de suite ...
+                <div class="loader loader-quart"><p>
+                Vos restaurants préférés arrivent tout de suite ...</p></div>
             </div>
         </section>
 
@@ -44,7 +44,8 @@
                 <div class="purpose">
                     <h2> Réservez le menu qui <br> vous convient </h2>
                     <p> Découvrez des restaurants d'exception, <br> séléctionnés par nos soins.</p>
-                    <input class="explore" type="button" value="Explorer nos restaurants">
+                    <a class="explore" href="Explore">Explorer nos restaurants</a> 
+
                 </div>
 
                 <!-- Running -->
@@ -81,7 +82,7 @@
                 <a class="restaurant1-link" href="menu1/menu1.html">
                     <div class="menilmontant">
                         <img class="menilmontant-img" src="images/restaurants/menilmontant.jpg" alt="menilmontant">
-                        <img class="menilmontant-new" src="images/font/nouveau.svg" alt="new">
+                        <p class="menilmontant-new">Nouveau</p>
                         <p class="menilmontant-title">La palette du goût </p>
                         <p class="menilmontant-place">Ménilmontant</p>
                         <img class ="menilmontant-heart" src="images/font/heart.svg" alt="heart">
@@ -92,7 +93,7 @@
                 <a class="restaurant2-link" href="menu2/menu2.html">
                     <div class="charonne">
                         <img class="charonne-img" src="images/restaurants/charonne.jpg" alt="charonne">
-                        <img class="charonne-new" src="images/font/nouveau.svg" alt="new">
+                        <p class="charonne-new">Nouveau</p>
                         <p class="charonne-title">La note enchantée</p>
                         <p class="charonne-place">Charonne</p>
                         <img class="charonne-heart" src="images/font/heart.svg" alt="heart">                    
