Update après mentorat

--- a/menu1/menu1.html
+++ b/menu1/menu1.html
@@ -38,7 +38,10 @@
                 <div class="main-title">
                     <p class="title">La palette du goût</p>
                     <img class ="heart" src="../images/font/heart.svg" alt="heart">
+                    <img class ="heart2" src="../images/font/heart-paint.svg" alt="heart">
+
                 </div>
+
 
                 <div class="starter">
                     <p class="starter-title"><span class="span1">ENTR</span>ÉES</p>
