Changement suite à session de mentorat: - centrage texte spinner - remise de police sur balise input - animation pour .explorer & order - ajout remplissage coeur au survol de chaque menu - centrage localisation sur responsive - centrage restaurant sur responsive - retrait max width 1440px - ajout min width à partir de 2000 px, pour menu/padding - logo nouveau effectué en html et css vs image - réunion de tous les css des menus sous un seul et unique css

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <!-- Restaurant selection -->
                 <h2>Restaurants</h2>
 
-                <a class="restaurant1-link" href="menu1/menu1.html">
+                <a class="restaurant1-link" href="menu/menu1.html">
                     <div class="menilmontant">
                         <img class="menilmontant-img" src="images/restaurants/menilmontant.jpg" alt="menilmontant">
                         <p class="menilmontant-new">Nouveau</p>
@@ -90,7 +90,7 @@
                     </div>
                 </a>
 
-                <a class="restaurant2-link" href="menu2/menu2.html">
+                <a class="restaurant2-link" href="menu/menu2.html">
                     <div class="charonne">
                         <img class="charonne-img" src="images/restaurants/charonne.jpg" alt="charonne">
                         <p class="charonne-new">Nouveau</p>
@@ -101,7 +101,7 @@
                     </div>
                 </a>
 
-                <a class="restaurant3-link" href="menu3/menu3.html">
+                <a class="restaurant3-link" href="menu/menu3.html">
                     <div class="cite-rouge">
                         <img class="cite-rouge-img" src="images/restaurants/cite-rouge.jpg" alt="cite-rouge">
                         <p class="cite-rouge-title">À la française</p>
@@ -111,7 +111,7 @@
                     </div>
                 </a>
 
-                <a class="restaurant4-link" href="menu4/menu4.html">
+                <a class="restaurant4-link" href="menu/menu4.html">
                     <div class="folie-mericourt">
                         <img class="folie-mericourt-img" src="images/restaurants/folie-mericourt.jpg" alt="folie-mericourt">
                         <p class="folie-mericourt-title">Le délice des sens</p>
